--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Personal Info Form</title>
   <link rel="icon" type="image/x-icon" href="download (22).jpg">
   <link rel="stylesheet" href="form.css" />
-  <link href="major.html" rel="stylesheet">
+  <link href="TU CU U list.html" rel="stylesheet">
 </head>
 <body>
 
@@ -33,4 +33,5 @@
   
 </body>
 </html>
+
 
