--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="text" placeholder="Dream University" required>
 
         <div class="buttons">
-          <button type="submit" class="submit-btn" formaction="major.html">Submit</button>
+          <button type="submit" class="submit-btn" formaction="TU CU PU list.html">Submit</button>
           <button type="reset" class="cancel-btn" onclick="window.location.href='index.html'">Cancel</button>
         </div>
     </form>
@@ -33,6 +33,7 @@
   
 </body>
 </html>
+
 
 
 
