--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Personal Info Form</title>
   <link rel="icon" type="image/x-icon" href="download (22).jpg">
   <link rel="stylesheet" href="form.css" />
-  <link href="TU CU PU list.html" rel="stylesheet">
+  <link href="mainpage.html" rel="stylesheet">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
         <input type="text" placeholder="Dream University" required>
 
         <div class="buttons">
-          <button type="submit" class="submit-btn" formaction="TU CU PU list.html">Submit</button>
+          <button type="submit" class="submit-btn" formaction="mainpage.html">Submit</button>
           <button type="reset" class="cancel-btn" onclick="window.location.href='index.html'">Cancel</button>
         </div>
     </form>
@@ -33,6 +33,7 @@
   
 </body>
 </html>
+
 
 
 
