--- a/mainpage.html
+++ b/mainpage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>University Categories</title>
   <link rel="icon" type="image/x-icon" href="download (22).jpg">
-  <link rel="stylesheet" href="list.css">
+  <link rel="stylesheet" href="mainpage.css">
 </head>
 <body>
     <header>
@@ -32,3 +32,4 @@
 
 </body>
 </html>
+
